<resources>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_stats">Statistics</string>
    <string name="action_logOut">Log Out</string>
    <string name="app_name">PiggyBank</string>
    <string name="btnSelectCategory">Select</string>
    <string name="btnDone">Done</string>
    <string name="lblAmount">Amount: $</string>
    <string name="lblCategory">Category: </string>
    <string name="lblMoneyType">Income: $</string>
    <string name="lblTransaction">Transactions</string>
    <string name="lblType">Type: </string>
    <string name="lblWallet">Wallet: </string>
    <string name="prmtAmount">Amount:</string>
    <string name="prmtCategories">Categories:</string>
    <string name="prmtDate">Date:</string>
    <string name="prmtStatistics">Statistics:</string>
    <string name="prmtType">Type:</string>
    <string name="rbtnExpense">Expense</string>
    <string name="rbtnIncome">Income</string>
    <string name="title_activity_add_transaction">Add Transaction</string>
    <string name="title_activity_view_transaction">ViewTransaction</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="lblEducation">Education</string>
    <string name="lblFood">Food</string>
    <string name="lblClothing">Clothing</string>
    <string name="lblBeauty">Beauty</string>
    <string name="lblTransportation">Transportation</string>
    <string name="lblTravel">Travel</string>
    <string name="lblEntertainment">Entertainment</string>
    <string name="lblHealthCare">Health Care</string>
    <string name="lblCategorySelectPrompt">Choose a category: </string>
    <string name="lblCategoryAddPrompt">Enter the new category\'s name: </string>
    <string name="lblSelectedCategoryPrompt">Selected: </string>
    <string name="title_activity_chart">Statistics</string>
    <string name="lblTotalIncome">Total Income: </string>
    <string name="lblTotalSpent">Total Spent: </string>
    <string name="descriptionGlass">Magnify Glass</string>
    <string name="descriptionCategory">Categories</string>
    <string name="descriptionPlus">Plus</string>
    <string name="hintAmount">Amount of money</string>
    <string name="hintCategory">Enter the name of category</string>
</resources>
