<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddTransactionActivity"
    tools:showIn="@layout/activity_add_transaction">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutSelectedCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btnSelectCategory"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/lblCategory"
                app:layout_constraintTop_toBottomOf="@+id/btnSelectCategory"
                app:layout_constraintVertical_bias="0.161">

                <ImageView
                    android:id="@+id/iViewSelectedCategory"
                    android:layout_width="79dp"
                    android:layout_height="55dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:srcCompat="@tools:sample/avatars[0]"
                    android:contentDescription="@string/descriptionCategory" />

                <TextView
                    android:id="@+id/lblSelectedCategoryPrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/lblSelectedCategoryPrompt"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/iViewSelectedCategory"
                    app:layout_constraintEnd_toEndOf="@+id/iViewSelectedCategory"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/lblSelectedCategoryName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/iViewSelectedCategory"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.709"
                    tools:text="Selected Category Name" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <CalendarView
                android:id="@+id/cView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lblAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/lblAmount"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/txtAmount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cView" />

            <TextView
                android:id="@+id/lblType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/lblType"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblAmount" />

            <TextView
                android:id="@+id/lblCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblCategory"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/btnSelectCategory"
                app:layout_constraintStart_toStartOf="@+id/lblType"
                app:layout_constraintTop_toTopOf="@+id/btnSelectCategory"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btnSelectCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/border_color"
                android:onClick="onClickSelect"
                android:text="@string/btnSelectCategory"
                android:textColor="@color/background_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/txtAmount"
                app:layout_constraintHorizontal_bias="0.167"
                app:layout_constraintStart_toStartOf="@+id/radioGroup"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <EditText
                android:id="@+id/txtAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginEnd="40dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lblAmount"
                app:layout_constraintTop_toBottomOf="@+id/cView"
                tools:text="0.00"
                android:autofillHints="@string/hintAmount"
                tools:ignore="LabelFor" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.556"
                app:layout_constraintStart_toEndOf="@+id/lblType"
                app:layout_constraintTop_toBottomOf="@+id/txtAmount">

                <RadioButton
                    android:id="@+id/rbtnIncome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/rbtnIncome"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="163dp"
                    tools:layout_editor_absoluteY="452dp" />

                <RadioButton
                    android:id="@+id/rbtnExpense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/rbtnExpense"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="163dp"
                    tools:layout_editor_absoluteY="496dp" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>