<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TransactionListActivity"
    tools:showIn="@layout/activity_transaction_list">

    <EditText
        android:id="@+id/txtDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/rvTransaction"
        app:layout_constraintEnd_toStartOf="@+id/ibtnSearch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:text="November 11, 2019" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/textview_border"
        app:layout_constraintBottom_toTopOf="@+id/ibtnSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblWallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/lblWallet"
            android:textAlignment="center"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/lblTransactions"
            app:layout_constraintTop_toBottomOf="@+id/lblTransactions"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/lblAmountWallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textAlignment="textEnd"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/lblWallet"
            app:layout_constraintEnd_toEndOf="@+id/lblTransactions"
            app:layout_constraintHorizontal_bias="0.593"
            app:layout_constraintStart_toEndOf="@+id/lblWallet"
            app:layout_constraintTop_toTopOf="@+id/lblWallet"
            app:layout_constraintVertical_bias="0.0"
            tools:text="$1000" />

        <TextView
            android:id="@+id/lblTransactions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/lblTransaction"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/lblAmountWallet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTransaction"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ibtnSearch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtDate"
        app:layout_constraintTop_toBottomOf="@+id/txtDate"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/ibtnSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/border_color"
        android:onClick="onClickSearch"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/txtDate"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/txtDate"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_search"
        android:contentDescription="@string/descriptionGlass" />



</androidx.constraintlayout.widget.ConstraintLayout>